--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <li><a href="#about">About me</a></li>
                         <li><a href="#work">My Works</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="map.html">map</a></li>
                     </ul>
                 </nav>
             </header>
