整合布局代码

--- a/map.html
+++ b/map.html
@@ -10,25 +10,26 @@
 			padding: 0;
 			margin: 0;
 		}
+		#container{
+			width:200px;
+			height: 300px;
+		}
 	</style>
 </head>
 <body>
 	<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script>
-	<div style="width: 100%;height: 300px;">
-		没什么用，为了测试地图。。。。。
-	</div>
 	<div id="container"></div>
 	<script type="text/javascript">
-		function a(){
-			let h=window.screen.height;
-			let w=window.screen.width;
-			console.log("height:"+h+"width:"+w);
-			var el=document.getElementById('container');
-			console.log(el);
-			el.style.width=w+'px';
-			el.style.height=h+'px';
-		}
-		window.onload=a;
+		// function a(){
+		// 	let h=window.screen.height;
+		// 	let w=window.screen.width;
+		// 	console.log("height:"+h+"width:"+w);
+		// 	var el=document.getElementById('container');
+		// 	console.log(el);
+		// 	el.style.width=w+'px';
+		// 	el.style.height=h+'px';
+		// }
+		// window.onload=a;
 		var map = new AMap.Map('container',{
 		    zoom: 16,
 		    scrollWheel:true,
