更改简历下载

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <h1>冯康凯</h1>
                         <p>冯康凯</p>
                         <h2>HTML / CSS / JavaScript</h2>
-                        <a href="#" target="_blank" class="but">下载简历</a>
+                        <a href="./word/简历-冯康凯15958119316.docx" target="_blank" class="but">下载简历</a>
                     </div>
                 </div>
             </section>
