--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" href="img/favicons/fkk.ico">
 
         <!-- 移动端设置 -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
         
         <!-- 字体 -->
         <link rel='stylesheet' href='css/mineFonts.css'>
