--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>.:: 冯康凯 ::.</title>
 
         <!-- 网页logo设置 -->
-        <link rel="shortcut icon" href="img/favicons/fkk.ico">
+        <link rel="icon" href="img/favicons/fkk.ico">
 
         <!-- 移动端设置 -->
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
