--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <!-- 字体 -->
         <link rel='stylesheet' href='css/mineFonts.css'>
-        <link rel='stylesheet' href='http://at.alicdn.com/t/font_404229_b7zcvvsdcrcc8fr.css'>
+        <!-- <link rel='stylesheet' href='http://at.alicdn.com/t/font_404229_b7zcvvsdcrcc8fr.css'> -->
 
         <!-- CSS样式 -->
         <link rel="stylesheet" href="css/normalize.min.css">
