--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/main.css">
         
         <!-- 地图js -->
-        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script>
+        <!-- <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script> -->
 
 
     </head>
