--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="wrapper">
 
-            <!-- <header>
+            <header>
                 <a class="menu-icon jiji">
                     <span></span>
                 </a>
@@ -39,7 +39,7 @@
                         <li><a href="map.html">地图功能</a></li>
                     </ul>
                 </nav>
-            </header> -->
+            </header>
 
             <section id="home" class="row">
                 <div class="overlay">
