--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
         
         <!-- 字体 -->
-        <link rel='stylesheet' href='css/mineFonts.css'>
+        <!-- <link rel='stylesheet' href='css/mineFonts.css'> -->
         <!-- <link rel='stylesheet' href='http://at.alicdn.com/t/font_404229_b7zcvvsdcrcc8fr.css'> -->
 
         <!-- CSS样式 -->
@@ -26,7 +26,7 @@
 
         <div class="wrapper">
 
-            <header>
+            <!-- <header>
                 <a class="menu-icon jiji">
                     <span></span>
                 </a>
@@ -39,7 +39,7 @@
                         <li><a href="map.html">地图功能</a></li>
                     </ul>
                 </nav>
-            </header>
+            </header> -->
 
             <section id="home" class="row">
                 <div class="overlay">
