--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
         
         <!-- 字体 -->
-        <!-- <link rel='stylesheet' href='css/mineFonts.css'> -->
-        <!-- <link rel='stylesheet' href='http://at.alicdn.com/t/font_404229_b7zcvvsdcrcc8fr.css'> -->
+        <link rel='stylesheet' href='css/mineFonts.css'>
+        <link rel='stylesheet' href='http://at.alicdn.com/t/font_404229_b7zcvvsdcrcc8fr.css'>
 
         <!-- CSS样式 -->
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         
         <!-- 地图js -->
-        <!-- <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script> -->
+        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script>
 
 
     </head>
