--- a/index.html
+++ b/index.html
@@ -241,6 +241,24 @@
                     <div style="clear: both;"></div>
                     <div id="showContainer">
                         <!-- 显示点击相应的容器 -->
+                        <ul>
+                            <li>
+                            <!-- 微信 -->
+                                <img src='img/我的微信.jpg' style='width:150px;'>
+                            </li>
+                            <li>
+                            <!-- 手机号码 -->
+                                <p>手机：15958119316</p>
+                            </li>
+                            <li>
+                                <!-- GitHub项目 -->
+                                <p>GitHub项目地址:https://github.com/fkk1024</p>
+                            </li>
+                            <li>
+                            <!-- 地图 -->
+                                <div id="map"></div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -262,6 +280,62 @@
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="js/skrollr.js"></script>
         <script src="js/main.js"></script>
+        <script type="text/javascript">
+            // C.html("<div id='map'></div>");
+             let h='400';
+             // let w=window.screen.width;
+             var el=$("#map");
+             el.css({
+                 width:'100%',
+                 height:h+'px'
+             })
+             // el.style.width=w+'px';
+             // el.style.height=h+'px';
+             // }
+             // window.onload=a;
+             var map = new AMap.Map('map',{
+                 zoom: 16,
+                 scrollWheel:true,
+                 center: [120.208732,30.166941]
+             });
+             var marker = new AMap.Marker({
+                 position: [120.208732,30.166941],//marker所在的位置
+                 map:map//创建时直接赋予map属性
+             });
+             marker.setMap(map);
+             //监听地图的click事件，点击地图，允许鼠标滚轮缩小或放大地图
+                     var clickEventListener = map.on('click', function() {
+                     map.setStatus({scrollWheel:true});
+                 });
+                 //监听地图的mouseout事件，鼠标移出地图区域，鼠标滚轮缩小或放大地图功能取消
+                 var mouseOutEventListener = map.on('mouseout',function(){
+                 map.setStatus({scrollWheel:false});
+                 });
+             // 工具控件
+             AMap.plugin(['AMap.ToolBar','AMap.MapType','AMap.Geolocation'],function(){
+                 //创建并添加工具条控件
+                 var toolBar = new AMap.ToolBar();
+                 var Geolocation = new AMap.Geolocation();
+                 var mapType = new AMap.MapType();
+                 map.addControl(toolBar);
+                 // map.addControl(mapType);
+                 map.addControl(Geolocation);
+             })
+              var info = new AMap.InfoWindow({
+                 content: '<div class="title">现居地址：滨江区</div><div class="content">'+
+                         '白马湖小区-白鹤苑<br/>',
+                 offset:new AMap.Pixel(0,-28),
+                 size:new AMap.Size(200,0)
+             })
+             info.open(map,marker.getPosition())
+             $('#contact').css({
+                 'paddingBottom':'10px',
+                 'textAlign': 'center',
+             }).children().find('#showContainer').css({
+                 'marginTop':'20px'
+                 // 'height':'600px'
+             })
+        </script>
 
     </body>
 
