链接我的游戏

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     </head>
-    <body>   
+    <body style="height: auto;">   
 
         <div class="wrapper">
 
@@ -66,8 +66,8 @@
                         <p
                             data-100="opacity:0;"
                             data-500="opacity:1;"
-                        >Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
-                        <a href="#" class="but">Get in touch</a>
+                        >专科主修供用电，主要针对强电的学习，因为对未来人生路的迷茫，选择3+2专升本。进入本科后学习弱电，以专业为电子信息，主修电子，但在第一年的下半学期，接触到网页设计这门课，我顿时觉得我未来看到了希望，我知道了我未来要做什么，之后便开始了自学之路。。。</p>
+                        <a href="#" class="but" title="点击更多学习总结">技术 / 能力</a>
                     </div>
                     <div class="col empty">&nbsp;</div>
                 </div>
@@ -81,12 +81,12 @@
                     >
                         <span class="icon-design"></span>
                         <ul>
-                            <li>UI / UX Design</li>
-                            <li>User Interface Design</li>
-                            <li>Interaction Design</li>
-                            <li>User Experience Thinking</li>
-                            <li>Prototyping</li>
-                            <li>Wireframing</li>
+                            <li>UI 能力</li>
+                            <li>使用icon work软件生成图标</li>
+                            <li>使用PS处理UI设计原稿</li>
+                            <li>使用阿里字体图标库</li>
+                            <li>使用在线字体</li>
+                            <li>...学习中</li>
                         </ul>
                     </div>
                     <div class="col services-frontend"
@@ -95,12 +95,14 @@
                     >
                         <span class="icon-computer"></span>
                         <ul>
-                            <li>Frontend Development</li>
-                            <li>HTML5 / CSS3</li>
-                            <li>jQuery & JavaScript libraries</li>
-                            <li>Responsive Design</li>
-                            <li>Sass</li>
-                            <li>Git / SVN</li>
+                            <li>前端 能力</li>
+                            <li>less/stylus</li>
+                            <li>Vue / Angular</li>
+                            <li>HTML / CSS3 / JS</li>
+                            <li>jQuery / Bootstrap</li>
+                            <li>Git / SVN / webpack</li>
+                            <li>HBuilder / WebStorm / sublime</li>
+                            <li>...学习中</li>
                         </ul>
                     </div>
                     <div class="col services-team"
@@ -109,12 +111,12 @@
                     >
                         <span class="icon-music"></span>
                         <ul>
-                            <li>Team Building</li>
-                            <li>Smiling</li>
-                            <li>Communication</li>
-                            <li>Team working</li>
-                            <li>Sharing my music</li>
-                            <li>...and more!</li>
+                            <li>后端 能力</li>
+                            <li>增删改查sql语句</li>
+                            <li>PHP后端交互</li>
+                            <li>PLSql软件</li>
+                            <li>报表配置</li>
+                            <li>...学习中</li>
                         </ul>
                     </div>
                 </div>
@@ -136,7 +138,9 @@
                         <p
                             data-900="opacity:0;"
                             data-1300="opacity:1;"
-                        >A selection of recent projects I've been working on: landing pages, websites, email marketing...</p>
+                        >杭州弘义科技有限公司——前端<br>
+                         台州智慧水务联盟——前端   
+                        </p>
                     </div>
                     <div class="col empty">&nbsp;</div>
                 </div>
@@ -145,11 +149,12 @@
                         data-1300="opacity:0;"
                         data-1400="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/智慧水务展示平台.png" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Design</h4>
-                                <a href="#" class="but">Click here</a>
+                                <h4>智慧水务展示平台</h4>
+                                <a href="www.shui00.com" class="but">点击-查看</a>
+                                <div>账号：台州市<br>密码：123456</div>
                             </div>
                         </div>
                     </div>
@@ -157,11 +162,11 @@
                         data-1300="opacity:0;"
                         data-1400="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/停车有道.jpg" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Design</h4>
-                                <a href="#" class="but">Click here</a>
+                                <h4>停车有道管理平台</h4>
+                                <a href="#" class="but">暂无链接</a>
                             </div>
                         </div>
                     </div>
@@ -169,11 +174,11 @@
                         data-1300="opacity:0;"
                         data-1600="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/反诈专家.png" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Design</h4>
-                                <a href="#" class="but">Click here</a>
+                                <h4>反诈专家后台系统</h4>
+                                <a href="#" class="but">暂无链接</a>
                             </div>
                         </div>
                     </div>
@@ -181,11 +186,11 @@
                         data-1300="opacity:0;"
                         data-1400="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/毕业设计.png" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                               <h4>Design</h4>
-                               <a href="#" class="but">Click here</a>
+                               <h4>毕业设计</h4>
+                               <a href="#" class="but">点击-查看</a>
                             </div>
                         </div>
                     </div>
@@ -196,8 +201,8 @@
                         <img src="img/works/1.jpg" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Design</h4>
-                                <a href="#" class="but">Click here</a>
+                                <h4>Vue点餐系统</h4>
+                                <a href="#" class="but">点击-查看</a>
                             </div>
                         </div>
                     </div>
@@ -208,8 +213,8 @@
                         <img src="img/works/1.jpg" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Design</h4>
-                                <a href="#" class="but">Click here</a>
+                                <h4>我的游戏</h4>
+                                <a href="https://fkk1024.github.io/mygame/." class="but">Click here</a>
                             </div>
                         </div>
                     </div>                    
