--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                             data-900="opacity:0;"
                             data-1300="opacity:1;"
                         >杭州弘义科技有限公司——前端<br>
-                         台州智慧水务联盟——前端   
+                         台州智慧水务联盟——前端  <br>
+                         <b>所有项目经历，在我简历中有详细说明</b> 
                         </p>
+                        <a href="word/简历-冯康凯15958119316.docx" class="but">下载简历</a>
                     </div>
                     <div class="col empty">&nbsp;</div>
                 </div>
@@ -210,11 +212,11 @@
                         data-1300="opacity:0;"
                         data-1600="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/game.jpg" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
                                 <h4>我的游戏</h4>
-                                <a href="https://fkk1024.github.io/mygame/." class="but">Click here</a>
+                                <a href="https://fkk1024.github.io/mygame/." class="but">点击-查看</a>
                             </div>
                         </div>
                     </div>                    
