--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
                         data-1300="opacity:0;"
                         data-1500="opacity:1;"
                     >
-                        <img src="img/works/1.jpg" alt="">
+                        <img src="img/works/vue.jpg" alt="">
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
-                                <h4>Vue点餐系统</h4>
-                                <a href="#" class="but">点击-查看</a>
+                                <h4>Vue项目</h4>
+                                <a href="#" class="but">仿饿了么-查看</a>
+                                <a href="#" class="but">点餐系统-查看</a>
                             </div>
                         </div>
                     </div>
