主页项目地址修改

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
                                 <h4>智慧水务展示平台</h4>
-                                <a href="www.shui00.com" class="but">点击-查看</a>
+                                <a href="http://www.shui00.com" class="but">点击-查看</a>
                                 <div>账号：台州市<br>密码：123456</div>
                             </div>
                         </div>
@@ -204,8 +204,8 @@
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
                                 <h4>Vue项目</h4>
-                                <a href="#" class="but">仿饿了么-查看</a>
-                                <a href="#" class="but">点餐系统-查看</a>
+                                <a href="https://github.com/fkk1024/VueProject-Ele" class="but">仿饿了么-查看</a>
+                                <a href="https://github.com/fkk1024/VueProject-Order" class="but">点餐系统-查看</a>
                             </div>
                         </div>
                     </div>
