添加加载动画

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="work-item-inside">
                             <div class="work-item-inside-content">
                                <h4>毕业设计</h4>
-                               <a href="#" class="but">点击-查看</a>
+                               <a href="https://fkk1024.github.io/graduateDesign/" class="but">点击-查看</a>
                             </div>
                         </div>
                     </div>
@@ -284,6 +284,11 @@
         </div>
 
         <div class="loader"></div>
+        <div id="loading">
+            <div class="loadingOut">
+                <div class="loadingIn"></div>
+            </div>
+        </div>
         
         <!-- JS -->
         <script src="js/jquery-1.11.0.min.js"></script>
@@ -340,7 +345,6 @@
                  'marginTop':'20px'
              })
         </script>
-
     </body>
 
 </html>
