--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
         
         <!-- 地图js -->
         <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=4387ae86febb83296bc66abda291906e"></script>
+        <script src="js/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript">
+            $(()=>{
+                var degOut=0;
+                var degIn=0;
+                var time = setInterval(function(){
+                    degOut+=5;
+                    degIn+=10;
+                 $('#loading .loadingOut').css({
+                    'transform': 'rotate('+degOut+'deg)'
+                 }) ;$('#loading .loadingIn').css({
+                    'transform': 'rotate(-'+degIn+'deg)'
+                 }) ;
+                },15)
+                window.onload=function(){
+                    clearInterval(time);
+                    $('#loading').css({
+                        'zIndex':'-1'
+                    })
+                }
+            })
+        </script>
 
 
     </head>
@@ -290,7 +312,6 @@
         <div class="loader"></div>
         
         <!-- JS -->
-        <script src="js/jquery-1.11.0.min.js"></script>
         <script src="js/modernizr-2.6.2.min.js"></script>
         <script src="js/skrollr.js"></script>
         <script src="js/main.js"></script>
