压缩图片更新加载动画

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 window.onload=function(){
                     clearInterval(time);
                     $('#loading').css({
+                        'zIndex':'-1',
                         'display':'none'
                     })
                 }
