添加学习网址

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             data-100="opacity:0;"
                             data-500="opacity:1;"
                         >专科主修供用电，主要针对强电的学习，因为对未来人生路的迷茫，选择3+2专升本。进入本科后学习弱电，以专业为电子信息，主修电子，但在第一年的下半学期，接触到网页设计这门课，我顿时觉得我未来看到了希望，我知道了我未来要做什么，之后便开始了自学之路。。。</p>
-                        <a href="#" class="but" title="点击更多学习总结">技术 / 能力</a>
+                        <a href="https://fkk1024.github.io/StudyWay/." class="but" title="点击更多学习总结">技术 / 能力</a>
                     </div>
                     <div class="col empty">&nbsp;</div>
                 </div>
