--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <script src="js/main.js"></script>
         <!-- 地图js -->
         <script type="text/javascript">
-             let h='400';
+             var h='400';
              var el=$("#map");
              el.css({
                  // width:'100%',
