--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <li>增删改查sql语句</li>
                             <li>PHP后端交互</li>
                             <li>PLSql软件</li>
-                            <li>报表配置</li>
+                            <li>nodejs</li>
                             <li>...学习中</li>
                         </ul>
                     </div>
@@ -167,8 +167,9 @@
                         <p
                             data-900="opacity:0;"
                             data-1300="opacity:1;"
-                        >杭州弘义科技有限公司——前端<br>
+                        >
                          台州智慧水务联盟——前端  <br>
+                                杭州育恩科技有限公司——前端
                          <b>所有项目经历，在我简历中有详细说明</b> 
                         </p>
                         <a href="word/简历-冯康凯15958119316.docx" class="but">下载简历</a>
@@ -329,10 +330,10 @@
              var map = new AMap.Map('map',{
                  zoom: 16,
                  scrollWheel:true,
-                 center: [120.208732,30.166941]
+                 center: [120.139221,30.173802]
              });
              var marker = new AMap.Marker({
-                 position: [120.208732,30.166941],//marker所在的位置
+                 position: [120.139221,30.173802],//marker所在的位置
                  map:map//创建时直接赋予map属性
              });
              marker.setMap(map);
@@ -356,7 +357,7 @@
              })
               var info = new AMap.InfoWindow({
                  content: '<div class="title">现居地址：滨江区</div><div class="content">'+
-                         '白马湖小区-白鹤苑<br/>',
+                         '浦沿街道-八家新村<br/>',
                  offset:new AMap.Pixel(0,-28),
                  size:new AMap.Size(200,0)
              })
