--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             data-1300="opacity:1;"
                         >
                          台州智慧水务联盟——前端  <br>
-                                杭州育恩科技有限公司——前端
+                                杭州育恩科技有限公司——前端 <br>
                          <b>所有项目经历，在我简历中有详细说明</b> 
                         </p>
                         <a href="word/简历-冯康凯15958119316.docx" class="but">下载简历</a>
